# NanarC2

./: .gitignore  Cargo.toml  README.md  مشروع تطبيقات شبكية.docx
Nanar-Client/: Cargo.toml  hash.test
Nanar-Client/src/: command_wrapper.rs  connection_handler.rs  fs_functions.rs  lib.rs  main.rs  messages.rs  ps_functions.rs  ps_mgmt.rs
Nanar-Client/src/connection_handler/: command_msg.rs  connection_helper.rs
Nanar-Client/src/fs_functions/: fs_helper.rs
Nanar-Client/src/ps_functions/: ps_helper.rs
Nanar-Server/: Cargo.toml  Hclient.py  ServerFinal.py  client.py  client_trial.py  clientenc.py  commands_handler.py  hussien.py  nanar_server.py
Nanar-Server/examples/: client.py  commands.txt  commands_handler.py  encrypt_handler.py  nanar_server.py  server.py
Nanar-Server/last/: Hclient.py  ServerFinal.py  clientenc.py  clients.json  clienttrial.py  commands_handler.py  test.py
Nanar-Server/src/: args_handler.rs  configs.rs  help.rs  lib.rs  main.rs  server_shell.rs
SysDesign/: Nanar-C2-prototype-doc.docx  basic-sysdesign.docx  commands.txt  messageForm,.txt  messageForm.txt
SysDesign/FSM/: FSM_generator.py  fsm_diagram
src/: configs.rs  help.rs  lib.rs  listeners.rs  main.rs  server_shell.rs
