[package]
name = "nanar_client"
version = "0.1.0"
edition = "2024"
#[target.'cfg(windows)'.windows_subsystem]

[dependencies]
chrono = "0.4.41"
tasklist = "0.3.0"
ntapi = "0.4.1"
tokio = { version = "1.45.1", features = ["full"] }
windows = { version = "0.61.1", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
] }